# pano-blend

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  conan_profile_msvc2026  conanfile.txt  main.cpp  pano-blend.rc.in
cmake/: GenerateVersion.cmake
doc/: algorithm.md  build-instructions-linux.md  build-instuctions-windows.md  hugin-workflow.md  large-panorama-plan.md  re_provenance.md
src/: blend.cpp  blend.h  colors.cpp  colors.h  labelmap.cpp  labelmap.h  main.cpp  seam.cpp  seam.h  tiff_io.cpp  tiff_io.h
test-data/: blend.tif  error.tif  mask.tif  mask_viz.tif  p1.tif  p2.tif  seam.tif  seam_viz.tif
tests/: test_blend.cpp  test_cli.cpp  test_input.cpp  test_labelmap.cpp
tools/: colorize_mask.py  tag_tiff.c
